fix: adjusts container card align in mobile

--- a/src/app/pages/articles/articles.component.scss
+++ b/src/app/pages/articles/articles.component.scss
@@ -2,8 +2,6 @@
   width: 100%;
   max-width: 650px;
   box-sizing: border-box;
-  @media (min-width: 768px) {
-  }
 }
 
 h1 {
