--- a/src/app/shared/project-card/project-card.component.scss
+++ b/src/app/shared/project-card/project-card.component.scss
@@ -17,6 +17,11 @@
   @media (min-width: 600px) {
     width: 580px;
   }
+
+  @media (max-width: 768px) {
+    min-width: calc(100vw - 2rem);
+    max-width: 341px;
+  }
 }
 
 .card-header {
